production/mongo-cstor/mongo-cstor-backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-cstor-backend
  namespace: mongo-cstor
spec:
  selector:
    matchLabels:
      app: mongo-cstor-backend
  template:
    metadata:
      labels:
        app: mongo-cstor-backend
    spec:
      serviceAccountName: mongo-cstor-operator
      containers:
      - name: mongo-cstor-backend-container
        ports:
        - containerPort: 3000
        args:
        - "mongodb://mongo-0.mongo"
        - "maya"
        - "mongo-cstor"
        - "openebs"
        - "maya-apiserver-service.openebs"
        image: inyee/mongo-cstor-backend:master-30ffbf7
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongo-cstor
  labels:
    app: mongo-cstor-backend
  name: mongo-cstor-backend-service
spec:
  type: NodePort
  ports:
  - name: mongo-cstor-backend
    port: 3000
    protocol: TCP
  selector:
    app: mongo-cstor-backend
