production/mongo-cstor/mongo-cstor-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo-cstor-client
  namespace: mongo-cstor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : mongo-cstor-client
    spec:
      containers:
        - name: mongo-cstor-client-container
          image: inyee/workloads-cstor-dashboard:3f98c7
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-cstor-client
  name: mongo-cstor-client-service
  namespace: mongo-cstor
spec:
  type: NodePort
  ports:
  - name: mongo-cstor-client
    port: 80
    protocol: TCP
  selector:
    app: mongo-cstor-client
