production/mongo-cstor/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: mongo-frontend-ingress
 namespace: mongo-cstor
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/tls-acme: "true"
  kubernetes.io/ingress.class: "nginx"
spec:
 tls:
 - hosts:
   - mongocstor.openebs.ci
   secretName: mongo-cstor-ingress
 rules:
 - host: mongocstor.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: mongo-cstor-client-service
         servicePort: 80
     - path: /api/
       backend:
         serviceName: mongo-cstor-backend-service
         servicePort: 3000
